# ABCDictionnary

./: CMakeLists.txt  doxygen_conf
example/: main.cpp
includes/: ABCDictionnary.h  AutoReleaseDictionnariable.h  Dictionnariable.h
src/: AutoReleaseDictionnariable.cpp  Dictionnary.cpp
